@@ -11,6 +11,7 @@
     <LinearLayout
         android:id="@+id/cadastro_linear"
         android:layout_width="match_parent"
+        android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -24,7 +25,7 @@
         <ImageView
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="35dp"
             android:src="@drawable/icon_login" />
 
         <EditText
@@ -67,7 +68,7 @@
             android:id="@+id/botao_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="75dp"
             android:backgroundTint="@color/white"
             android:padding="10dp"
             android:text="Entrar"
@@ -75,15 +76,15 @@
             android:textSize="25sp" />
 
         <TextView
-            android:textStyle="bold"
             android:id="@+id/text_cadastrar"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Novo usuário? Cadastre-se aqui"
             android:textColor="@color/white"
             android:textSize="20sp"
-            android:layout_marginBottom="50dp"/>
+            android:layout_marginBottom="15dp"/>
 
         <RelativeLayout
             android:layout_marginTop="30dp"
