@@ -12,3 +12,4 @@ Add:
             2- Assim que capturar email do facebook, devo autenticar o usuário imediatamente, e como saber o usuário pelo firebase.
             3- Credenciais do facebook, como escoder e conseguir subir esse projeto ao github publico sem afetar api etc...
     7. Modificação no layout de login, deixando design mais moderno.
+    8. Criação da subtela para validar usuário anteriormente conectado,
